[package]
name = "test_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
chrono = "0.4.19"
directories-next = "2.0.0"
iced = { version = "0.3.0", features = ["async-std", "debug","image"] }
iced_native = "0.4.0"
image = "0.23.14"
open = "2.0.2"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
winrt = "0.7.2"
